syntax = "proto3";

package protobuf;

message Entry {
    string ID = 1;
    float Total = 2;
}

message TopOverallData {
    string ID = 1;
    string Year = 2;
    string Bucket = 3;
    string Category = 4;
    string Party = 5;
    map<string, float> Amts = 6;
    repeated Entry Threshold = 7;
    int32 SizeLimit = 8;
}
